force-app/main/default/objects/Command__c/Command__c.object-meta.xml
<CustomObject>
    <label>Command</label>
    <nameField>
        <displayFormat>CMD-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>