force-app/main/default/objects/Command__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <description>Holds the related record&apos;s ID. This is just a text field to allow for polymorphism.</description>
    <inlineHelpText>Holds the related record&apos;s ID. This is just a text field to allow for polymorphism.</inlineHelpText>
    <label>Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>