force-app/main/default/objects/Command__c/fields/UpdatedFieldsJSON__c.field-meta.xml
<CustomField>
    <fullName>UpdatedFieldsJSON__c</fullName>
    <description>A JSON of the updated field values by field name. Only relevant for create and update operations.</description>
    <inlineHelpText>A JSON of the updated field values by field name. Only relevant for create and update operations.</inlineHelpText>
    <label>Updated Fields (JSON)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>